# IRISVOICE

./: .gitignore  .kilocodemodes  AGENT.md  AI AGENT COMPLETE IMPLEMENTATION PRD.txt  BENCHMARKS.md  BOOT_STRAP.md  CHANGELOG.md  CLAUDE.md  CLI-crawler-Spec.md  Comprehensive Node Theming PRD.txt  FIXES-OVERVIEW.md  IMPLEMENTATION-FIXES-LOG.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_TRACKER.md  IRISLFM.code-workspace  IRISVOICE-FIXES-TRACKER.md  IRIS_Memory_Foundation_Spec.md  IRIS_Restructuring_Plan_v2.md  Mycellium Kyudo Layer Guide.md  Mycellium Spec reviewV2.md  NavLevel4-tracker.md  OPTIMIZATION_LOG.md  PRD-track.md  README.md  Spotlight.md  TASK_16.4_VERIFICATION.md  TASK_16.6_SUMMARY.md  TASK_21.3_SUMMARY.md  THEMING-DETAILED-BREAKDOWN.md  THEMING-IMPLEMENTATION-REVIEW.md  THEMING-IMPLEMENTATION-TRACKING.md  TRANSITION_BREAKDOWN.md  UI_TARS_FIXES_APPLIED.md  UI_TARS_IMPLEMENTATION_SUMMARY.md  VISION-INTEGRATION-PLAN.md  VISION-INTEGRATION-README.md  Wing-screen-design.md  (+43 more)
.claude/: launch.json  settings.json  settings.local.json
.kilocode/: mcp.json
IRISVOICE/: .gitignore  .stylelintrc.json  AGENTS.md  AGENT_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INTEGRATION_TEST_REPORT.md  MODEL_AGNOSTIC_ARCHITECTURE_VERIFICATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PORCUPINE_INTEGRATION_SUMMARY.md  PROJECT.md  README.md  TROUBLESHOOTING_GUIDE.md  check_devices.py  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+9154 files in other folders)
