[package]
name = "iris-widget"
version = "0.1.0"
description = "IRIS Borderless Desktop Widget"
authors = ["IRIS Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

# Remove the [target.'cfg(windows)'.dependencies] section completely